tmux: update style of status bar

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -6,7 +6,7 @@
 set -g automatic-rename on
 set -g renumber-windows on
 set -g set-titles on
-set -g automatic-rename-format '#{b:pane_current_path}: #[italics]#{b:pane_current_command}#[noitalics]'
+set -g automatic-rename-format '#{b:pane_current_path}:[#[italics]#{b:pane_current_command}#[noitalics]]'
 
 # For helix editor
 set -sg escape-time 0
