tmux: enable focus-events

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -8,9 +8,10 @@ set -g renumber-windows on
 set -g set-titles on
 set -g automatic-rename-format '#{b:pane_current_path}:[#[italics]#{b:pane_current_command}#[noitalics]]'
 
-# For helix editor
+# General settings
 set -sg escape-time 0
 set -g default-terminal "tmux-256color"
+set-option -g focus-events on
 set-option -a terminal-overrides ",alacritty:RGB"
 
 # Activity notification
