tmux: add support for popup session

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -48,12 +48,16 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Status bar
+%if "#{!=:##{=5:session_name},popup}"
 set -g status on
+%else
+set -g status off
+%endif
 set -g status-interval 5
 set -g status-style bg=colour232
 set -g status-justify left
@@ -76,3 +80,13 @@ set -gw message-style fg=black,bg=colour246,bold
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style fg=colour248
 
+# Popup pane
+bind p run-shell -b '\
+    popup_id="popup_$(tmux display-message -p "##{session_id}" | cut -d"\$" -f2)"; \
+    if test "$(echo #{session_name} | cut -d"_" -f 1)" = "popup" ; then \
+        tmux detach-client; \
+    else \
+        tmux popup -d "#{pane_current_path}" -xC -yC -w80% -h75% \
+            -E "tmux attach -t \"${popup_id}\" || tmux new -s \"${popup_id}\" "; \
+    fi; \
+'
