zed: use ruff for Python formatting and linting

--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -18,18 +18,16 @@
     },
     "Python": {
       "format_on_save": {
-        "external": {
-          "command": "ruff",
-          "arguments": [
-            "check",
-            "--exit-zero",
-            "--fix",
-            "--stdin-filename",
-            "{buffer_path}",
-            "-"
-          ]
+        "language_server": {
+          "name": "ruff"
         }
-      }
+      },
+      "formatter": {
+        "language_server": {
+          "name": "ruff"
+        }
+      },
+      "language_servers": ["pyright", "ruff"]
     }
   },
   "lsp": {
