zed: prevent taplo from expanding arrays automatically

--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -49,6 +49,11 @@
           "command": "clippy"
         }
       }
+    },
+    "taplo": {
+      "settings": {
+        "array_auto_expand": false
+      }
     }
   },
   "show_whitespaces": "boundary",
