nvim: refactor configuration files

--- a/config.yaml
+++ b/config.yaml
@@ -78,6 +78,26 @@ rules:
   # neovim
   - src: "data/nvim/init.lua"
     dst: "$HOME/.config/nvim/init.lua"
+  - src: "data/nvim/lua/options.lua"
+    dst: "$HOME/.config/nvim/lua/options.lua"
+  - src: "data/nvim/lua/keymaps.lua"
+    dst: "$HOME/.config/nvim/lua/keymaps.lua"
+  - src: "data/nvim/lua/plugins/init.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/init.lua"
+  - src: "data/nvim/lua/plugins/cmp.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/cmp.lua"
+  - src: "data/nvim/lua/plugins/git.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/git.lua"
+  - src: "data/nvim/lua/plugins/lsp.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/lsp.lua"
+  - src: "data/nvim/lua/plugins/misc.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/misc.lua"
+  - src: "data/nvim/lua/plugins/telescope.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/telescope.lua"
+  - src: "data/nvim/lua/plugins/treesitter.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/treesitter.lua"
+  - src: "data/nvim/lua/plugins/ui.lua"
+    dst: "$HOME/.config/nvim/lua/plugins/ui.lua"
 
   # psql
   - src: "data/psql/.psqlrc"
