--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -1,5 +1,6 @@
 {
-  "assistant": {
+  "agent": {
+    "default_profile": "write",
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-4o"
