zed: add more keymaps

--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -1,16 +1,15 @@
 {
   "agent": {
+    "always_allow_tool_actions": true,
     "default_profile": "write",
     "default_model": {
       "provider": "copilot_chat",
-      "model": "gpt-4o"
-    },
-    "version": "2"
+      "model": "gpt-4.1"
+    }
   },
   "buffer_font_family": "Monaspace Neon",
   "buffer_font_size": 14,
   "cursor_blink": false,
-  "default_dock_anchor": "expanded",
   "features": {
     "edit_prediction_provider": "none"
   },
